closed #1 (#3)
* closed #1

* closed #3
